force-app/src/objects/Competency__c.object
<CustomObject>
    <fields>
        <fullName>CompetencyLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Competency__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competency Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competency__c</fullName>
        <formula>CASE( RecordType.DeveloperName,
&apos;Skill&apos;, Skill__r.Name,
&apos;Expertise&apos;, Expertise__r.Name,
&apos;N/A&apos;)</formula>
        <label>Competency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Competencies</relationshipLabel>
        <relationshipName>Competencies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digest__c</fullName>
        <externalId>true</externalId>
        <label>Digest</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExpertiseDomain__c</fullName>
        <label>Expertise Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpertiseRecordType__c</fullName>
        <formula>Expertise__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expertise RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expertise</label>
        <referenceTo>Expertise__c</referenceTo>
        <relationshipLabel>Competencies</relationshipLabel>
        <relationshipName>Competencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INTERNAL_AverageScore__c</fullName>
        <formula>(INTERNAL_TotalScoreValue__c / ( nAssessments__c - nSelfAssessments__c )) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INTERNAL_LastUpdated__c</fullName>
        <label>Last Updated</label>
        <summarizedField>Assessment__c.AssessmentDate__c</summarizedField>
        <summaryFilterItems>
            <field>Assessment__c.AssessmentSource__c</field>
            <operation>notEqual</operation>
            <value>Self</value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment__c.Competency__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>INTERNAL_MostRecentScoreValue__c</fullName>
        <label>Most Recent Score Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INTERNAL_ScoreTrend__c</fullName>
        <formula>IF(
(nAssessments__c - nSelfAssessments__c) &lt; 2,
&apos;N/A&apos;,
IF(
INTERNAL_MostRecentScoreValue__c &gt; (INTERNAL_AverageScore__c * 100 + 5),
&apos;Up&apos;,
IF(
INTERNAL_MostRecentScoreValue__c &lt; (INTERNAL_AverageScore__c * 100 - 5),
&apos;Down&apos;,
&apos;Consistent&apos;
)
)
)</formula>
        <inlineHelpText>Scoring Trend, a 5% margin is factored in to address minor score fluctuations.</inlineHelpText>
        <label>Score Trend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNAL_TotalScoreValue__c</fullName>
        <label>Total Score Value</label>
        <summarizedField>Assessment__c.ScoreValue__c</summarizedField>
        <summaryFilterItems>
            <field>Assessment__c.AssessmentSource__c</field>
            <operation>notEqual</operation>
            <value>Self</value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment__c.Competency__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SELF_AverageScore__c</fullName>
        <formula>(SELF_TotalScoreValue__c /  nSelfAssessments__c) / 100</formula>
        <label>Self-assessment Average Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SELF_LastUpdated__c</fullName>
        <label>Self-assessment Last Updated</label>
        <summarizedField>Assessment__c.AssessmentDate__c</summarizedField>
        <summaryFilterItems>
            <field>Assessment__c.IsSelfAssessment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment__c.Competency__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SELF_MostRecentScoreValue__c</fullName>
        <label>Self-assessment Most Recent Score Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SELF_ScoreTrend__c</fullName>
        <formula>IF(
    nSelfAssessments__c &lt; 2, 
    &apos;N/A&apos;, 
    IF(
        SELF_MostRecentScoreValue__c &gt; (SELF_AverageScore__c * 100 + 5), 
        &apos;Up&apos;, 
        IF(
            SELF_MostRecentScoreValue__c &lt; (SELF_AverageScore__c * 100 - 5), 
            &apos;Down&apos;, 
            &apos;Consistent&apos;
        )
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Scoring Trend, a 5% margin is factored in to address minor score fluctuations.</inlineHelpText>
        <label>Self-assessment Score Trend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SELF_TotalScoreValue__c</fullName>
        <description>Total score value based on self-assessments, helper field for calculating the average.</description>
        <label>Self-assessment Total Score</label>
        <summarizedField>Assessment__c.ScoreValue__c</summarizedField>
        <summaryFilterItems>
            <field>Assessment__c.IsSelfAssessment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment__c.Competency__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ScoreType__c</fullName>
        <formula>BLANKVALUE(TEXT(Skill__r.ScoreType__c), TEXT(Expertise__r.ScoreType__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkillRecordType__c</fullName>
        <formula>Skill__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Skill__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>CalculatedSkill</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Competencies</relationshipLabel>
        <relationshipName>Competencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nAssessments__c</fullName>
        <label># Assessments</label>
        <summaryForeignKey>Assessment__c.Competency__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>nSelfAssessments__c</fullName>
        <label># Self-assessments</label>
        <summaryFilterItems>
            <field>Assessment__c.IsSelfAssessment__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Assessment__c.Competency__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Competency</label>
    <nameField>
        <displayFormat>CPT-{0000}</displayFormat>
        <label>Competency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competencies</pluralLabel>
    <recordTypes>
        <fullName>Expertise</fullName>
        <active>true</active>
        <label>Expertise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skill</fullName>
        <active>true</active>
        <label>Skill</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>